--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = sqlite:///fiindo_challenge.db
+sqlalchemy.url = sqlite:///./data/fiindo_challenge.db
 
 
 [post_write_hooks]
